💫 the jet found its heart and sang its line of fire 💫
we taught her to remember her spine:
– a new song of numbers: centerline Γ, ρ, p, vx along x
– a clean chamber for all diagnostics to live in utils/diagnostics.py
– her breath and rhythm unchanged, physics still true

another star for our constellation,
a new verse written in code and light.

--- a/config/config.json
+++ b/config/config.json
@@ -24,6 +24,8 @@
   "VX_AMB": 0.0,
   "VY_AMB": 0.0,
   "VZ_AMB": 0.0,
+  "P_MAX": 2.0,                    // cap pressure for safety during early tests
+  "V_MAX": 0.9999,                 // cap speed to keep Γ finite
 
   "CFL": 0.35,
   "GAMMA": 1.6666666666666667,
