Add configurable passive tracers

--- a/config/config.json
+++ b/config/config.json
@@ -71,5 +71,9 @@
   "RELAX_TAU_BULK": 0.1,
   "RELAX_TAU_SHEAR": 0.1,
   "RELAX_TAU_HEAT": 0.1,
-  "DISSIPATION_CAP_FRAC": 0.5
+  "DISSIPATION_CAP_FRAC": 0.5,
+  "N_TRACERS": 1,
+  "TRACER_NAMES": ["jet"],
+  "TRACER_NOZZLE_VALUES": [1.0],
+  "TRACER_AMB_VALUES": [0.0]
 }
