--- a/config/config_grmhd.json
+++ b/config/config_grmhd.json
@@ -1,34 +1,31 @@
 {
-  "NX": 96,
-  "NY": 64,
-  "NZ": 64,
+  "NX": 8,
+  "NY": 8,
+  "NZ": 8,
   "Lx": 1.0,
   "Ly": 1.0,
   "Lz": 1.0,
-  "T_END": 0.05,
-  "OUT_EVERY": 10,
+  "T_END": 0.001,
+  "OUT_EVERY": 1,
   "PRINT_EVERY": 1,
-
-  "JET_RADIUS": 0.10,
-  "JET_CENTER": [0.0, 0.5, 0.5],   // x ignored; y,z center of inlet
+  "JET_RADIUS": 0.1,
+  "JET_CENTER": [0.0, 0.5, 0.5],
   "GAMMA_JET": 8.0,
   "ETA_RHO": 0.03,
   "P_EQ": 0.01,
   "SHEAR_THICK": 0.02,
   "NOZZLE_PROFILE": "top_hat",
-  "NOZZLE_TURB": true,
-  "NOZZLE_PERTURB": "random",
-  "TURB_VAMP": 0.02,
+  "NOZZLE_TURB": false,
+  "NOZZLE_PERTURB": "none",
+  "TURB_VAMP": 0.0,
   "TURB_PAMP": 0.0,
-
   "RHO_AMB": 1.0,
-  "P_AMB": 0.01,                   // if omitted, defaults to P_EQ
+  "P_AMB": 0.01,
   "VX_AMB": 0.0,
   "VY_AMB": 0.0,
   "VZ_AMB": 0.0,
-  "P_MAX": 2.0,                    // cap pressure for safety during early tests
-  "V_MAX": 0.9999,                 // cap speed to keep Γ finite
-
+  "P_MAX": 2.0,
+  "V_MAX": 0.9999,
   "CFL": 0.35,
   "GAMMA": 1.6666666666666667,
   "NG": 2,
@@ -40,25 +37,13 @@
   "RESULTS_UNIQUE": false,
   "CHECKPOINT_EVERY": 0,
   "RESTART_PATH": null,
-
-  // physics mode
-  "PHYSICS": "grmhd",   // "hydro" | "rmhd"
-
-  // GLM cleaning for ∇·B
-  "GLM_CH": 1.0,        // hyperbolic wave speed (≈ max signal speed)
-  "GLM_CP": 0.1,        // parabolic damping strength
-
-  // magnetic field init at the nozzle
-  "B_INIT": "poloidal",     // "none" | "poloidal" | "toroidal"
-  "B0": 0.05,           // reference field magnitude
-
-  // caps (reuse existing)
-  "V_MAX": 0.9999,
-  "P_MAX": 2.0,
-
-  // GR placeholders
+  "PHYSICS": "grmhd",
   "GR_METRIC": "kerr-schild",
   "GR_MASS": 1.0,
-  "GR_SPIN": 0.0,
-  "ORTHONORMAL_FLUX": true
+  "GR_SPIN": 0.5,
+  "ORTHONORMAL_FLUX": true,
+  "GLM_CH": 1.0,
+  "GLM_CP": 0.1,
+  "B_INIT": "poloidal",
+  "B0": 0.05
 }
