Add SN-lite parametric heating/cooling

--- a/config/config_sn_lite.json
+++ b/config/config_sn_lite.json
@@ -31,5 +31,11 @@
   "SN_GRAVITY_MASS": 1.0,
   "SN_GRAVITY_SOFTEN": 0.05,
   "SN_GRAVITY_CENTER": [0.5, 0.5, 0.5],
-  "SN_GRAVITY_ENERGY": false
+  "SN_GRAVITY_ENERGY": false,
+  "SN_HEATING_ENABLED": true,
+  "SN_HEATING_MODEL": "gain_spherical",
+  "SN_HEATING_RATE": 0.02,
+  "SN_COOLING_RATE": 0.005,
+  "SN_GAIN_RADIUS": 0.25,
+  "SN_GAIN_WIDTH": 0.15
 }
