Add SN-lite gamma override and composition passives

--- a/config/config_sn_lite.json
+++ b/config/config_sn_lite.json
@@ -11,6 +11,7 @@
   "NG": 2,
   "CFL": 0.35,
   "GAMMA": 1.6666666666666667,
+  "SN_EOS_GAMMA": 1.3333333333333333,
   "PHYSICS": "sn",
   "RHO_AMB": 1.0,
   "P_AMB": 0.01,
