Add non-ideal MHD and radiation coupling hooks

--- a/config/config_resist.json
+++ b/config/config_resist.json
@@ -43,5 +43,17 @@
   "B_INIT": "poloidal",
   "B0": 0.05,
   "RESISTIVE_ENABLED": true,
-  "RESISTIVITY": 0.001
+  "RESISTIVITY": 0.001,
+  "NONIDEAL_MHD_ENABLED": true,
+  "HALL_ENABLED": true,
+  "HALL_COEFF": 0.01,
+  "AMBIPOLAR_ENABLED": true,
+  "AMBIPOLAR_COEFF": 0.01,
+  "HYPERRESIST_ENABLED": true,
+  "HYPERRESIST_COEFF": 0.001,
+  "JOULE_HEAT_ENABLED": true,
+  "JOULE_HEAT_EFF": 0.001,
+  "RADIATION_COUPLING_ENABLED": true,
+  "RADIATION_COEFF": 0.01,
+  "RADIATION_T_RAD": 0.01
 }
