Add kinetic-effect heating model

--- a/config/config_resist.json
+++ b/config/config_resist.json
@@ -55,5 +55,9 @@
   "JOULE_HEAT_EFF": 0.001,
   "RADIATION_COUPLING_ENABLED": true,
   "RADIATION_COEFF": 0.01,
-  "RADIATION_T_RAD": 0.01
+  "RADIATION_T_RAD": 0.01,
+  "KINETIC_EFFECTS_ENABLED": true,
+  "KINETIC_MODEL": "current",
+  "KINETIC_COEFF": 0.001,
+  "KINETIC_CAP": 0.01
 }
