Refine doc validation runs and clean LaTeX warnings

--- a/config/config_doc_jet.json
+++ b/config/config_doc_jet.json
@@ -5,8 +5,8 @@
   "Lx": 1.0,
   "Ly": 1.0,
   "Lz": 1.0,
-  "T_END": 0.06,
-  "OUT_EVERY": 8,
+  "T_END": 0.12,
+  "OUT_EVERY": 4,
   "PRINT_EVERY": 5,
 
   "JET_RADIUS": 0.10,
@@ -16,10 +16,10 @@
   "P_EQ": 0.01,
   "SHEAR_THICK": 0.02,
   "NOZZLE_PROFILE": "top_hat",
-  "NOZZLE_TURB": false,
-  "NOZZLE_PERTURB": null,
-  "TURB_VAMP": 0.0,
-  "TURB_PAMP": 0.0,
+  "NOZZLE_TURB": true,
+  "NOZZLE_PERTURB": "random",
+  "TURB_VAMP": 0.01,
+  "TURB_PAMP": 0.005,
 
   "RHO_AMB": 1.0,
   "P_AMB": 0.01,
