--- a/config/config_hlld_full.json
+++ b/config/config_hlld_full.json
@@ -34,12 +34,16 @@
   "RIEMANN": "hlld_full",
   "RK_ORDER": 2,
   "DEBUG": true,
-  "RESULTS_UNIQUE": false,
+  "RESULTS_UNIQUE": true,
   "CHECKPOINT_EVERY": 0,
   "RESTART_PATH": null,
   "PHYSICS": "rmhd",
   "GLM_CH": 1.0,
   "GLM_CP": 0.1,
-  "B_INIT": "poloidal",
-  "B0": 0.05
+  "B_INIT": "none",
+  "B0": 0.0,
+  "RMHD_INIT": "riemann",
+  "RMHD_RIEMANN_X0": 0.5,
+  "RMHD_RIEMANN_LEFT": [1.0, 0.0, 0.0, 0.0, 1.0, 0.5, 1.0, 0.0, 0.0],
+  "RMHD_RIEMANN_RIGHT": [0.125, 0.0, 0.0, 0.0, 0.1, 0.5, -1.0, 0.0, 0.0]
 }
