--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: ["*"]
   pull_request:
   workflow_dispatch:
+  schedule:
+    - cron: "0 7 * * *"
 
 jobs:
   validation-quick:
@@ -61,3 +63,34 @@ jobs:
         with:
           name: astrofd-pdf
           path: docs/astrofd.pdf
+
+  validation-full:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    env:
+      MPLBACKEND: Agg
+      MPLCONFIGDIR: ${{ github.workspace }}/.mplcache
+      PYTHONUNBUFFERED: "1"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y mpich libmpich-dev
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          mkdir -p "${MPLCONFIGDIR}"
+
+      - name: Run full validation suite
+        run: |
+          python tools/run_validation_suite.py
